--- a/frontend/view/user/storeDetails/reviews.html
+++ b/frontend/view/user/storeDetails/reviews.html
@@ -8,140 +8,18 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+   
     <script src="/js/user/storeDetails/storeDetail_reviews.js" defer></script>
-    <link rel="stylesheet" href="/css/user/storeDetail.css">
-    <style>
-
-.details_container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: left;
-
-}
-
-.rating_summary {
-    display: grid;
-    grid-template-columns: 0.7fr 1.4fr; /* 두 개의 컬럼을 1:1 비율로 */
-    gap: 20px; /* 그리드 간격 (옵션) */
-    padding: 5%;
-}
-
-.star-rating {
-    display: flex;
-    align-items: center;
-    margin: 5px 0;
-}
-
-.star-rating span {
-    width: 40px;
-}
-
-.bar {
-    flex-grow: 1;
-    background-color: #e0e0e0;
-    border-radius: 5px;
-    height: 10px;
-    margin: 0 10px;
-}
-
-.filled {
-    background-color: orange;
-    border-radius: 5px;
-    height: 100%;
-}
-
-.average_rating {
-   
-    display: flex;
-    flex-direction: column;  
-    align-items: center; 
-    margin-top: 10px;  
-
-}
-
-.average_rating strong {
-    font-size: 1.5em;
-    margin-top: 5px; 
-}
-
-.orderBy{
-   float: right;
-   margin-top: 5%;
-    border: 0;
-  
-}
-
-.orderBy_sec{
-    margin-bottom: 10%;
-}
-
-.review {
-    border-bottom: 1px solid #e0e0e0;
-    padding-top: 30px;
-    padding-bottom: 10px;
-}
-
-
-.review_header {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    gap: 10px;
-    margin-top: 1%;
-}
-
-.review_info span{
- margin-right: 20px;
-}
-
-.userImg img {
-    object-fit: cover;
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-}
-
-.review-content {
-    margin: 10px 0;
+    <link rel="stylesheet" href="/css/user/storeDetails/storeDetail_reviews.css">
     
-}
-
-.review_images {
-    display: flex;
-    max-width: 680px;
-    height: 220px;
-    border-radius: 5px;
-    overflow-x: auto;
-   
-}
-
-.review_img_container {
-    display: flex;
-    width: 200px;
-    height: 200px;
-    gap: 1px;
-   
-}
-
-.review_img_container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-}
+    <script src="/js/user/component.js"></script>
 
 
-
-</style>
 </head>
 <body>
 
  <div id="app">
-
+    <header-navbar></header-navbar>
     <div class="square_section">
         <div class="cButton-container">
             <div class="cButton" v-for="(button, index) in buttons" 
@@ -237,6 +115,7 @@
            
         </div>
     </div>
+    <footer-component></footer-component>
  </div>
 </body>
 </html>
