--- a/frontend/view/user/userLogin.html
+++ b/frontend/view/user/userLogin.html
@@ -108,7 +108,7 @@
                 <button class="btn btn-outline-warning btn-block confirm-button" @click.prevent="login">로그인</button>
               </div>
               <div class=" d-flex flex-column text-center px-5 mt-3 mb-3"> 
-                <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=6219ccda509680348fe4b5d460baf4b8&redirect_uri=http://localhost/api/socialLogin" class="confirm-button">
+                <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=6219ccda509680348fe4b5d460baf4b8&redirect_uri=https://smartreserve.store/api/socialLogin" class="confirm-button">
                   <img src="/assets/user/img/kakao_login_medium_wide.png" style="width: 100%; height:45px;">
                 </a>
               </div>
