--- a/frontend/css/user/storeDetail.css
+++ b/frontend/css/user/storeDetail.css
@@ -375,6 +375,7 @@ a {
     display: flex;
     max-width: 700px;
     justify-content: space-around;
+    justify-content: left;
 }
 
 .facilities_category {
