--- a/frontend/css/user/store.css
+++ b/frontend/css/user/store.css
@@ -190,7 +190,6 @@
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
 }
-
 .category-title button:hover {
   background-color: #e0e0e0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -236,4 +235,30 @@ body {
   height: 100%;
   margin: 0;
   background-color: #f8f9fa;
+}
+.loading-message {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loading-message img {
+  width: 100px;
+  height: 100px;
+}
+
+.loading-message p {
+  margin-top: 10px;
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+  z-index: 10;
+  text-align: center;
 }
