--- a/frontend/view/user/cart.html
+++ b/frontend/view/user/cart.html
@@ -35,6 +35,12 @@
   </head>
   <body>
     <div id="app" class="bg-light">
+      <div
+        id="spinner"
+        class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center"
+      >
+        <div class="spinner-grow text-warning" role="status"></div>
+      </div>
       <header-navbar></header-navbar>
 
       <div class="container section-container menu-section">
@@ -142,7 +148,7 @@
       </div>
       <footer-component></footer-component>
     </div>
-
+    <script src="/js/axiosSetting.js"></script>
     <script src="/js/user/component.js"></script>
     <script src="/js/user/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
