--- a/frontend/view/user/storeDetails/recommend.html
+++ b/frontend/view/user/storeDetails/recommend.html
@@ -54,6 +54,9 @@
                 </div>
             </div>
         </div>
+        <button class="scroll-to-top" id="scrollToTopBtn" @click="scrollToTop">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
         <footer-component></footer-component>
     </div>
 </body>
