--- a/frontend/css/user/storeDetails/storeInfo.css
+++ b/frontend/css/user/storeDetails/storeInfo.css
@@ -2,6 +2,9 @@
     height: 100%;
 }
 
+.gap10 {
+    margin-top: 10px;
+}
 
 .details_container {
     max-width: 800px;
@@ -141,4 +144,10 @@ a {
 .info-content {
     margin: 5px 0; 
     color: #333; 
+}
+
+.list_none{
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
