--- a/frontend/view/user/storeDetails/storeInfo.html
+++ b/frontend/view/user/storeDetails/storeInfo.html
@@ -50,7 +50,7 @@
             <div class="square_section">
             <h2 class="my_title" id="store_location">위치</h2>
             <div id="map" style="width:100%;height:350px;" v-if="restaurantData && restaurantData.data"></div>
-            <div v-if="restaurantData && restaurantData.data">
+            <div class="gap10" v-if="restaurantData && restaurantData.data">
                 {{ restaurantData.data.directionGuide }}
             </div>
             </div>
@@ -68,7 +68,7 @@
                 <p class="info-label">📅정기 휴무</p>
 
                 <p class="info-content" v-if="allSchedulesOpen">연중 무휴입니다.</p>
-                <ul>
+                <ul class="list_none">
                     <li v-for="(day, index) in getClosedDays()" :key="index">{{ day }}</li>
                 </ul>
             </div>
